--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
     <title>Regular Expressions</title>
 </head>
 
-<!-- ref -->
+
 
 <body>
     <div class="container">
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+
+            </div>
+        </div>
 
     </div>
 
