--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto">
-
+                <h1>User Form</h1>
+                <form>
+                    <div class="form-group">
+                        <label>Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Name">
+                        <div class="invalid-feedback">
+                            Name must be between 2 and 10 characters.
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
 
